--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -43,3 +43,7 @@
 // List
 .list-inside { list-style-position: inside }
 
+// Dimensions
+.h-top { height: 500px; }
+.h-bottom { height: 550px; }
+
